--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <script src="js/scripts.js"></script>
+    <script src="js/CETEI.js"></script>
     <div>Hello, <i>world</i>!</div>
   </body>
 
