--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
   <body>
     <script src="js/CETEI.js"></script>
-    <div>Hello, <i>world</i>!</div>
+    <body>
+      <div id="TEI"></div>
+
+      <script>
+         var CETEIcean = new CETEI()
+         CETEIcean.getHTML5("data/bronze.xml", function(data) {
+             document.getElementById("TEI").appendChild(data)
+         })
+      </script>
+     <link rel="stylesheet" href="css/CETEIcean.css">
+    </body>
   </body>
 
 </html>
