removed custom css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
              document.getElementById("TEI").appendChild(data)
          })
       </script>
-     <link rel="stylesheet" href="css/CETEIcean.css">
+     <link rel="stylesheet" href="css/CETEIcean.css"/>
+     
+
     </body>
   </body>
 
