--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <script>
          var CETEIcean = new CETEI()
-         CETEIcean.getHTML5("data/bronze.xml", function(data) {
+         CETEIcean.getHTML5("data/Bronze.xml", function(data) {
              document.getElementById("TEI").appendChild(data)
          })
       </script>
